test/Fail/ShapeIrrelevantConstructor.err
ShapeIrrelevantConstructor.agda:4,21-38: error: [GenericError]
Shape-irrelevant constructors are not supported
when checking the constructor wrap in the declaration of Wrap
